# CS221

./: ROADMAP.md
v1/: README.md
v1/ai_toolkit/: __init__.py  search.py
v1_1/: README.md
v1_1/ai_toolkit/: structures.py
v1_1/ai_toolkit/examples/: tram_mdp_demo.py
v1_1/tests/: test_search_tram.py
v1_2/: README.md  pyproject.toml  run_tests.py
v1_2/ai_toolkit/: __init__.py  __main__.py  search.py
v1_3/: README.md  pyproject.toml
v1_3/ai_toolkit/: __init__.py  __main__.py  bench.py  mdp.py  search.py  viz.py
v1_3/ai_toolkit/domains/: tram.py
v1_3/ai_toolkit/examples/: halving_game_demo.py  linear_regression_demo.py
v1_4/: README.md  pyproject.toml
v1_4/ai_toolkit/: __init__.py  __main__.py  structures.py
v1_4/ai_toolkit/domains/: tram.py
v1_5/: pyproject.toml
v1_5/ai_toolkit/: __init__.py  __main__.py  games.py  viz.py
v2_0_step1/: pyproject.toml
v2_0_step1/ai_toolkit/: __main__.py  games.py
v2_0_step1/ai_toolkit/cli/: bench.py
v2_0_step1/ai_toolkit/core/: __init__.py
v2_0_step1/ai_toolkit/core/mdp/: algorithms.py
v2_0_step1/ai_toolkit/core/ml/: __init__.py
v2_0_step1/ai_toolkit/core/search/: algorithms.py
v2_0_step1/ai_toolkit/domains/tram/: problem.py
v2_0_step1/ai_toolkit/examples/: feature_extractor_demo.py
v2_0_step1/ai_toolkit/viz/: trace_html.py
v2_0_step2/ai_toolkit/cli/: __main__.py
v2_0_step2/ai_toolkit/core/: results.py  traces.py
v2_0_step2/ai_toolkit/examples/: edit_distance_demo.py
v2_0_step2/ai_toolkit/experimental/: __init__.py
v2_0_step2/tests/: test_edit_distance.py  test_mdp_value_iteration.py  test_ml.py
v2_0_step3-5/: pyproject.toml
v2_0_step3-5/ai_toolkit/: mdp.py  search.py
v2_0_step3-5/ai_toolkit/cli/: __main__.py  bench.py
v2_0_step3-5/ai_toolkit/core/: protocols.py  results.py  traces.py
v2_0_step3-5/legacy/: game.py
v2_0_step6/: README.md
v2_0_step6/ai_toolkit/: ml.py  optim.py
v2_0_step6/ai_toolkit/cli/: bench.py
v2_0_step6/ai_toolkit/core/: traces.py
v2_0_step6/ai_toolkit/examples/: tram_mdp_demo.py
v2_0_step6/legacy/: tram.py
v2_0_step6/tests/: test_viz_html.py
v2_0_step7-8/: README.md  pyproject.toml
v2_0_step7-8/ai_toolkit/: bench.py
v2_0_step7-8/ai_toolkit/cli/: __init__.py  __main__.py
v2_0_step7-8/ai_toolkit/examples/: tram_demo.py
v2_0_step7-8/docs/: API_STABILITY.md
v2_0_step7-8/legacy/: tram-a-Star.py
v2_0_step7-8/tests/: test_cli_smoke.py  test_search_properties.py
v2_0_step7-8a/: .gitignore  CHANGELOG.md  MIGRATION_v1_5_to_v2_0.md  README.md
v2_0_step7-8a/ai_toolkit/: __init__.py  dp.py  structures.py
v2_0_step7-8a/tests/: test_mdp_policy_iteration.py  test_schema_trace_bench.py
(+18 files in other folders)
