[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-toolkit"
version = "0.1.4"
description = "Small reusable toolbox of classic AI algorithms (search, MDPs, games, optimization, DP)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Ryan (local refactor)" }]
license = { text = "MIT" }
dependencies = [
  "numpy>=1.22",
]

[tool.setuptools]
packages = ["ai_toolkit", "ai_toolkit.domains", "ai_toolkit.examples"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["ai_toolkit"]
