[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-toolkit"
version = "2.0.0a0"
description = "Small reusable toolbox of classic AI algorithms (search, MDPs, games, optimization, DP)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Ryan (local refactor)" }]
license = { text = "MIT" }
dependencies = [
  "numpy>=1.22",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["ai_toolkit"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_toolkit*"]
exclude = ["legacy*"]
