[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-toolkit"
version = "2.0.0"
description = "Small reusable toolbox of classic AI algorithms (search, MDPs, games, optimization, DP)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Ryan (local refactor)" }]
license = { text = "MIT" }
dependencies = [
  "numpy>=1.22",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "mypy>=1.8.0",
  "types-setuptools",
]

[tool.ruff]
line-length = 120
target-version = "py310"
select = ["E", "F", "I", "B"]
ignore = ["E203", "E266", "E501"]
exclude = ["legacy", "build", "dist", ".venv"]

[tool.ruff.isort]
known-first-party = ["ai_toolkit"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true
pretty = true
exclude = [
  '^legacy/',
  '^build/',
  '^dist/',
]
files = [
  "ai_toolkit/core",
  "ai_toolkit/cli",
  "ai_toolkit/domains",
  "ai_toolkit/viz",
]
